--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="nav">
-    <div class="logo">OnePage</div>
+    <div class="logo">TwoPage</div>
     <div class="navigaions">
       <a href="#">Home</a>
       <a href="#">About</a>
